--- a/style.css
+++ b/style.css
@@ -18,11 +18,15 @@ body{
 img{
     max-width: 100%;
     display: block;
-    border-radius: 10px;
+    
+}
+
+h1{
+    font-size: 1.5rem;
 }
 
 p{
-    font-size: 18px;
+    font-size: 16px;
     color: hsl(215, 9%, 51%);
 }
 
@@ -35,7 +39,7 @@ p{
     flex-direction: column;
     border-radius: 15px;
     color: white;
-    gap: 1.5rem;
+    gap: 1.7rem;
 }
 
 .flex{
@@ -65,6 +69,7 @@ hr{
 .avater img{
     border: 1px solid white;
     margin-right: 0.4rem;
+    border-radius: 50%;
 }
 
 .avater span{
